--- a/database/config/config.json
+++ b/database/config/config.json
@@ -14,10 +14,12 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "username": "doadmin",
+    "password": "zzjsrmg6hl7zo9x3",
+    "database": "defaultdb",
+    "host": "db-postgresql-fra1-05163-do-user-4363550-0.a.db.ondigitalocean.com",
+    "dialect": "postgres",
+    "port": 25060,
+    "sslmode": "require"
   }
 }
